<resources>
    <string name="app_name">SaneTools</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="edtInserirCPF">Digite o CPF (sem pontos e/ou traços)</string>
    <string name="edtInserirNome">Digite o Nome</string>
    <string name="edtInserirSenha1">Repita a senha</string>
    <string name="edtInserirEmail">Digite o email</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="btnLimpar">LIMPAR</string>
    <string name="acaoSobre">Sobre o App</string>
    <string name="acaoAjuda">Ajuda</string>
    <string name="acaoSair">Sair</string>
    <string name="edtSugestao">Escreva aqui sua sugestão:</string>
    <string name="SplashScreen">- Bem Vindo - <br /> SaneTools</string>
    <string name="hintCPF">CPF</string>
    <string name="hintSenha">SENHA</string>
    <string name="edtInserirSenha">Digite uma senha</string>
    <string name="title_activity_home_cliente">HomeCliente</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_home_equipe">HomeEquipe</string>
    <string name="logradouro">Logradouro: </string>
    <string name="numero"> N°.: </string>
    <string name="cep"> CEP: </string>
    <string name="bairro"> Bairro: </string>
    <string name="cidade"> Cidade: </string>
    <string name="bemVindo">Bem Vindo, </string>
    <string name="numOrdemServico">Numero da Ordem de Servico:</string>
    <string name="tipoServico">Tipo do Serviço:</string>
    <string name="dataGeracao">Data da Geração:</string>
    <string name="dataBaixa">Data da Baixa:</string>
    <string name="status">Status:</string>
    <string name="idImovel">Matricula do Imovel:</string>
    <string name="matricula">Matrícula do Imovel:</string>
    <string name="fatura">N°. da fatura:</string>
    <string name="mesRef">Mês Referência:</string>
    <string name="valor">Valor: R$</string>
    <string name="title_activity_cadastrar_cliente">Cadastrar Usuário</string>
    <string name="observacao">Observação:</string>

</resources>
