<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.apptools.sanetools.Login"
    tools:showIn="@layout/activity_login">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/edtCPF"
        android:hint="@string/hintCPF"
        android:imeOptions="actionNext"
        android:maxLength="11"
        android:inputType="number"
        android:layout_marginTop="80dp"
        android:gravity="center"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/edtSenha"
        android:hint="@string/hintSenha"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:layout_marginTop="30dp"
        android:gravity="center"/>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="vertical">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btnEntrar"
        android:text="@string/btnEntrar"
        android:layout_weight="1"
        android:onClick="logar"
        android:layout_gravity="center"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btnLimparLogin"
        android:text="@string/btnLimpar"
        android:layout_weight="1"
        android:layout_gravity="center"/>

</LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/txtCadastro"
        android:textColor="#000066"
        android:text="Primeiro Acesso? Cadastre-se."
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

</LinearLayout>
