<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CPF"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtInserirCPF"
        android:id="@+id/edtInserirCPF"
        android:imeOptions="actionNext"
        android:maxLength="11"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NOME"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtInserirNome"
        android:id="@+id/edtInserirNome"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EMAIL"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtInserirEmail"
        android:id="@+id/edtInserirEmail"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SENHA"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtInserirSenha"
        android:id="@+id/edtInserirSenha"
        android:maxLength="8"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtInserirSenha1"
        android:id="@+id/edtInserirSenha1"
        android:maxLength="8"
        android:inputType="textPassword"
        android:imeOptions="actionNext"/>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="CADASTRAR"
            android:layout_weight="1"
            android:id="@+id/btnSalvarCad"
            android:layout_gravity="bottom"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="CANCELAR"
            android:layout_weight="1"
            android:id="@+id/btnCancelarCad"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</LinearLayout>